[gd_scene load_steps=20 format=3 uid="uid://kcyty54ino0a"]

[ext_resource type="Script" path="res://scenes/test_3d_scene.gd" id="1_dbdlu"]
[ext_resource type="PackedScene" uid="uid://686uh750o2ls" path="res://components/procedural_cubes.tscn" id="1_qgeib"]
[ext_resource type="PackedScene" uid="uid://cri6cmbabdpri" path="res://components/character.tscn" id="1_tvbwn"]
[ext_resource type="Script" path="res://components/shape_rotate.gd" id="3_rv42l"]
[ext_resource type="Script" path="res://selection_button.gd" id="5_5hrof"]

[sub_resource type="QuadMesh" id="QuadMesh_eyekw"]

[sub_resource type="ViewportTexture" id="ViewportTexture_nmkp7"]
viewport_path = NodePath("ShapeView1")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qqaiu"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_nmkp7")

[sub_resource type="ViewportTexture" id="ViewportTexture_ox5no"]
viewport_path = NodePath("ShapeView2")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1mrut"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_ox5no")

[sub_resource type="QuadMesh" id="QuadMesh_3afhb"]

[sub_resource type="ViewportTexture" id="ViewportTexture_wblv3"]
viewport_path = NodePath("ShapeView3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rw5cm"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_wblv3")

[sub_resource type="ViewportTexture" id="ViewportTexture_eo5oq"]
viewport_path = NodePath("ShapeView4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_03xb7"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_eo5oq")

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_j57q3"]

[sub_resource type="PlaneMesh" id="PlaneMesh_u8jih"]

[sub_resource type="SphereMesh" id="SphereMesh_tivbr"]

[sub_resource type="SphereShape3D" id="SphereShape3D_pbp15"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_dbdlu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.965926, 0.0669873, 0.25, -0.258819, 0.25, 0.933013, -3.08008e-09, -0.965926, 0.258819, 0, 12.3729, 0)
light_energy = 3.0

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(0.946525, 0, -0.322629, 0, 1, 0, 0.322629, 0, 0.946525, 301.46, 7.41642, 47.644)
omni_range = 47.5716
omni_attenuation = 0.378929

[node name="LightmapGI" type="LightmapGI" parent="."]

[node name="Player" parent="." instance=ExtResource("1_tvbwn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.057909, 1.27425, 6.74692)

[node name="ShapeViewMesh1" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.84781, 1.33596, 1.78177)
mesh = SubResource("QuadMesh_eyekw")
surface_material_override/0 = SubResource("StandardMaterial3D_qqaiu")

[node name="ShapeViewMesh2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02241, 1.33596, 1.78177)
mesh = SubResource("QuadMesh_eyekw")
surface_material_override/0 = SubResource("StandardMaterial3D_1mrut")

[node name="ShapeViewMesh3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.825062, 1.33596, 1.78177)
mesh = SubResource("QuadMesh_3afhb")
skeleton = NodePath("../ShapeViewMesh2")
surface_material_override/0 = SubResource("StandardMaterial3D_rw5cm")

[node name="ShapeViewMesh4" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.64461, 1.33596, 1.78177)
mesh = SubResource("QuadMesh_eyekw")
surface_material_override/0 = SubResource("StandardMaterial3D_03xb7")

[node name="ShapeView1" type="SubViewport" parent="."]

[node name="Node3D" type="Node3D" parent="ShapeView1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -50, 0)
script = ExtResource("3_rv42l")

[node name="CubeGen" parent="ShapeView1/Node3D" instance=ExtResource("1_qgeib")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)

[node name="Camera3D" type="Camera3D" parent="ShapeView1/Node3D"]

[node name="ShapeView2" type="SubViewport" parent="."]

[node name="Node3D" type="Node3D" parent="ShapeView2"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -50, 0)
script = ExtResource("3_rv42l")

[node name="CubeGen" parent="ShapeView2/Node3D" instance=ExtResource("1_qgeib")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)

[node name="Camera3D" type="Camera3D" parent="ShapeView2/Node3D"]

[node name="ShapeView3" type="SubViewport" parent="."]

[node name="Node3D" type="Node3D" parent="ShapeView3"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -50, 0)
script = ExtResource("3_rv42l")

[node name="CubeGen" parent="ShapeView3/Node3D" instance=ExtResource("1_qgeib")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)

[node name="Camera3D" type="Camera3D" parent="ShapeView3/Node3D"]

[node name="ShapeView4" type="SubViewport" parent="."]

[node name="Node3D" type="Node3D" parent="ShapeView4"]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, -50, 0)
script = ExtResource("3_rv42l")

[node name="CubeGen" parent="ShapeView4/Node3D" instance=ExtResource("1_qgeib")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)

[node name="Camera3D" type="Camera3D" parent="ShapeView4/Node3D"]

[node name="StaticBody3D" type="StaticBody3D" parent="."]
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_j57q3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D/CollisionShape3D"]
mesh = SubResource("PlaneMesh_u8jih")

[node name="sphere mesh 1" type="MeshInstance3D" parent="."]
transform = Transform3D(0.390222, 0, 0, 0, 0.390222, 0, 0, 0, 0.390222, -2.4684, 0.638198, 2.38421)
mesh = SubResource("SphereMesh_tivbr")

[node name="Area3D" type="Area3D" parent="sphere mesh 1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0707587, 0)
script = ExtResource("5_5hrof")

[node name="CollisionShape3D" type="CollisionShape3D" parent="sphere mesh 1/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0707587, 0)
shape = SubResource("SphereShape3D_pbp15")

[node name="sphere mesh 2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.390222, 0, 0, 0, 0.390222, 0, 0, 0, 0.390222, -0.86479, 0.638198, 2.38421)
mesh = SubResource("SphereMesh_tivbr")

[node name="Area3D" type="Area3D" parent="sphere mesh 2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0707587, 0)
script = ExtResource("5_5hrof")

[node name="CollisionShape3D" type="CollisionShape3D" parent="sphere mesh 2/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0707587, 0)
shape = SubResource("SphereShape3D_pbp15")

[node name="sphere mesh 3" type="MeshInstance3D" parent="."]
transform = Transform3D(0.390222, 0, 0, 0, 0.390222, 0, 0, 0, 0.390222, 0.737638, 0.638198, 2.38421)
mesh = SubResource("SphereMesh_tivbr")

[node name="Area3D" type="Area3D" parent="sphere mesh 3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0707587, 0)
script = ExtResource("5_5hrof")

[node name="CollisionShape3D" type="CollisionShape3D" parent="sphere mesh 3/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0707587, 0)
shape = SubResource("SphereShape3D_pbp15")

[node name="sphere mesh 4" type="MeshInstance3D" parent="."]
transform = Transform3D(0.390222, 0, 0, 0, 0.390222, 0, 0, 0, 0.390222, 2.32987, 0.638198, 2.38421)
mesh = SubResource("SphereMesh_tivbr")

[node name="Area3D" type="Area3D" parent="sphere mesh 4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0707587, 0)
script = ExtResource("5_5hrof")

[node name="CollisionShape3D" type="CollisionShape3D" parent="sphere mesh 4/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0707587, 0)
shape = SubResource("SphereShape3D_pbp15")

[connection signal="input_event" from="sphere mesh 1/Area3D" to="sphere mesh 1/Area3D" method="_on_input_event"]
[connection signal="input_event" from="sphere mesh 2/Area3D" to="sphere mesh 2/Area3D" method="_on_input_event"]
[connection signal="input_event" from="sphere mesh 3/Area3D" to="sphere mesh 3/Area3D" method="_on_input_event"]
[connection signal="input_event" from="sphere mesh 4/Area3D" to="sphere mesh 4/Area3D" method="_on_input_event"]
